[package]
name = "blvm-secp256k1"
version = "0.1.10"
edition = "2024"
authors = ["Bitcoin Commons Team"]
description = "Rust reimplementation of libsecp256k1 with ASM for hot paths. Performance-optimized secp256k1 for Bitcoin/Ethereum."
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-secp256k1"
keywords = ["secp256k1", "bitcoin", "ecdsa", "schnorr", "cryptography"]
categories = ["cryptography", "algorithms"]
rust-version = "1.85"

[lib]
name = "blvm_secp256k1"
path = "src/lib.rs"

[dependencies]
subtle = "2.5"
num-bigint = "0.4"
num-integer = "0.1"

# sha2-asm doesn't support Windows; split by target to avoid it there
[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { version = "0.10" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.4"
hex = "0.4"
subtle = "2.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_ops"
harness = false

[profile.release]
lto = false
codegen-units = 16

[features]
default = ["std"]
std = []

